added deska bokiem

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
                             Do zrobienia dzisiaj
                         </div>
                         <div class="card-body">
+                            <p>Deska prawa: 1:00</p>
+                            <p>Deska lewa: 1:00</p>
                             <p>Deska: <span id="dzis-deska"></span></p>
                             <p>Trzymanie: <span id="dzis-trzymanie"></span></p>
                             <p>Burpee: <span id="dzis-burpee"></span></p>
